k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agora
spec:
  type: NodePort
  selector:
    app: agora
  ports:
    - name: http
      port: 8080
      targetPort: http
      nodePort: 30088
